Update branding, add JWT auth, and refactor API calls
- Changed title in `index.html` to "Trung Ta Quang Template".
- Added proxy setting in `package.json` for local development.
- Updated copyright notice in `Footer.jsx`.
- Improved readability of login state check and updated contact info in `Header.jsx`.
- Refactored login process in `Login.jsx` to use new `CallAPI` utility.
- Created `callApi.jsx` for encapsulating API call logic with Axios.
- Added API URL constant in `constant.jsx`.
- Modified `IdentityController.cs` to implement JWT authentication and new login endpoints.
- Updated `Program.cs` for JWT configuration and user secrets.
- Enhanced `appsettings.json` with JWT settings.
- Added CORS support and cookie configuration in `ServiceCollectionExtensions.cs`.

--- a/src/CleanArchitectureTemplate.API/appsettings.json
+++ b/src/CleanArchitectureTemplate.API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "your-very-long-random-secret-key",
+    "Issuer": "your-issuer",
+    "Audience": "your-audience"
+  }
 }
