--- a/FE_React/package.json
+++ b/FE_React/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "proxy": "http://localhost:5169",
   "scripts": {
     "start": "concurrently \"npm run dev\" \"npm run json\"",
     "dev": "vite",
