--- a/src/CleanArchitectureTemplate.Application/CleanArchitectureTemplate.Application.csproj
+++ b/src/CleanArchitectureTemplate.Application/CleanArchitectureTemplate.Application.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Mapster.DependencyInjection" Version="1.0.2-pre01" />
     <PackageReference Include="MediatR" Version="12.3.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
   </ItemGroup>
 
   <ItemGroup>
