Add microfrontend components and expand API structure
This commit introduces several microfrontend components in `Home.tsx` for authentication, orders, products, and users, complete with Vietnamese titles and descriptions. The `package.json` files for multiple microfrontends have been updated to support a monorepo structure, and a new `my-monorepo` package has been created.

Additionally, the `package-lock.json` has been updated to include new dependencies like `react-router-dom` and `react` version 19.0.0. The `App.tsx` file now dynamically imports remote components, enhancing the microfrontend architecture.

New API controllers have been added to handle CRUD operations for various entities, and several repository interfaces and implementations have been created or updated. The `UnitOfWork` class has been modified to include these new repositories, ensuring centralized data access management. Lastly, the database connection string in `appsettings.Development.json` has been updated.

--- a/frontend/shell/package.json
+++ b/frontend/shell/package.json
@@ -2,6 +2,10 @@
   "name": "shell",
   "version": "0.1.0",
   "private": true,
+  "main": "src/index.js",
+  "workspaces": [
+    "packages/*"
+  ],
   "dependencies": {
     "@module-federation/runtime": "^0.11.1",
     "@testing-library/dom": "^10.4.0",
