--- a/src/CleanArchitectureTemplate.API/appsettings.Development.json
+++ b/src/CleanArchitectureTemplate.API/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    //"DB": "Data Source=TRUNGTQ-SS-HCM\\MSSQLSERVER01;Initial Catalog=DBTemplate;Integrated Security=True;Trust Server Certificate=True"
-    "DB": "Data Source=TRUNGTAQUANG;Initial Catalog=DBTemplate;Integrated Security=True;Trust Server Certificate=True"
+    "DB": "Data Source=TRUNGTQ-SS-HCM\\MSSQLSERVER01;Initial Catalog=DBTemplate;Integrated Security=True;Trust Server Certificate=True"
+    //"DB": "Data Source=TRUNGTAQUANG;Initial Catalog=DBTemplate;Integrated Security=True;Trust Server Certificate=True"
 
   },
   "Logging": {
