Add artifact upload actions to CI/CD workflows
Updated `backend-ci-cd.yml` to include `actions/upload-artifact@v3` for uploading `backend-artifact` from the `publish/` directory.

Updated `frontend-ci-cd.yml` to include `actions/upload-artifact@v3` for uploading `frontend-artifact` from the `FE_React/dist` directory.

--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -1,5 +1,8 @@
 name: Backend CI/CD
-
+uses: actions/upload-artifact@v3
+  with:
+    name: backend-artifact
+    path: publish/
 on:
   push:
     branches:
