Refactor application for product seeding and API updates
This commit introduces a significant refactor of the application, focusing on enhancing the product catalog and transitioning from a restaurant seeder to a product seeder. Key changes include:

- Updated `package.json` to change the proxy server and server port.
- Introduced `IProductSeeder` interface and `ProductSeeder` class to handle product data seeding.
- Refactored multiple components to utilize a new `CallAPI` utility for API interactions, improving state management and error handling.
- Enhanced product data structure in `Product.json`, adding detailed attributes and user reviews.
- Updated various backend controllers and database migration files to support the new product-focused architecture.

Overall, these changes improve the application's maintainability, user experience, and data handling capabilities.

--- a/src/CleanArchitectureTemplate.Application/CleanArchitectureTemplate.Application.csproj
+++ b/src/CleanArchitectureTemplate.Application/CleanArchitectureTemplate.Application.csproj
@@ -25,4 +25,11 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Category\Handler\Command\" />
+    <Folder Include="Features\Category\Request\Command\" />
+    <Folder Include="Features\Product\Handler\Command\" />
+    <Folder Include="Features\Product\Request\Command\" />
+  </ItemGroup>
+
 </Project>
